[tool.poetry]
name = "research_gps_activity_extraction"
version = "0.1.0"
description = "Investigation of gps activity extraction methods & performance estimate"
authors = ["Adil <32989359+AtmosOne@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
anyconfig = "^0.13.0"
scikit-learn = "^1.1.3"
scipy = "^1.9.3"
pydantic = "^1.10.2"
shapely = "^1.8.5"
geopandas = "^0.12.1"
pandera = "^0.13.4"
geopy = "^2.3.0"
flake8 = "^6.0.0"
pylint = "^2.15.8"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.2"
jupyter = "^1.0.0"
jupyter-contrib-core = "^0.4.2"
jupyter-contrib-nbextensions = "^0.7.0"
pytest-cov = "^4.0.0"
autopep8 = "^2.0.0"
jupyterthemes = "^0.20.0"
keplergl = "^0.3.2"
pre-commit = "^2.20.0"
plotly = "^5.11.0"
xlrd = "^2.0.1"
pyarrow = "^10.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
