[tool.poetry]
name = "streamlit-gps-clustering-app"
version = "0.1.0"
description = ""
authors = ["Adil <32989359+AtmosOne@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
scikit-learn = "^1.2.0"
scipy = "^1.9.3"
pydantic = "^1.10.2"
geopandas = "^0.11.1"
geopy = "^2.3.0"
pre-commit = "^2.20.0"
xlrd = "^2.0.1"
pyarrow = "^10.0.1"
gps-activity = "^0.7.0"
streamlit = "^1.15.2"
keplergl = "^0.3.2"
shapely = "^1.8.5"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.0"
jupyter = "^1.0.0"
flake8 = "^6.0.0"
pylint = "^2.15.8"
flake8-bugbear = "^22.12.6"
flake8-builtins = "^2.0.1"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-functions = "^0.0.7"
flake8-import-order = "^0.18.2"
jupyter-contrib-core = "^0.4.2"
pytest-cov = "^4.0.0"
jupyterthemes = "^0.20.0"
pre-commit = "^2.20.0"
plotly = "^5.11.0"
jupyter-contrib-nbextensions = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
